<resources>
    <string name="app_name">IntentsProj</string>
    <string name="activity_one">Activity 1</string>
    <string name="activity_second">Activity 2</string>
    <string name="num_one">Number 1</string>
    <string name="num_two">Number 2</string>
    <string name="btn_ok">OK</string>
    <string name="add">+</string>
    <string name="dividing">/</string>
    <string name="subtract">-</string>
    <string name="multiply">*</string>
</resources>